# rum

./: .env  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc  Dockerfile  LICENSE  PKGBUILD  README.md  netlify.toml  package.json  pnpm-lock.yaml  postcss.config.cjs  rum.desktop  svelte.config.js  vite.config.js
.github/workflows/: tauri.yaml
patches/: chota+0.8.0.patch
pkgbuild/ci/: PKGBUILD
pkgbuild/git/: PKGBUILD
src/: .session.vim  app.html  app.postcss  app.scss  global.scss  hooks.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  database.rs  download.rs  lib.rs  library.rs  main.rs  util.rs
src-tauri/src/command/: config.rs  database.rs  download.rs  library.rs  mod.rs
src/lib/: AddTorrentClientModal.svelte  Banner.svelte  Card.svelte  ColorSetting.svelte  ConfigureQBittorrentModal.svelte  DownloadGameModal.svelte  DownloadItem.svelte  DownloadsList.svelte  GameCard.svelte  GameGrid.svelte  GameList.svelte  GamePanel.svelte  GlobalKeyBinds.svelte  Grid.svelte  Header.svelte  LocalGameCard.svelte  LocalGameGrid.svelte  LocalGamePanel.svelte  Modal.svelte  Navbar.svelte  PageTransition.svelte  Pagination.svelte  Panel.svelte  Sidebar.svelte  ThemeProvider.svelte  WindowControls.svelte  asyncable.js  command.js  store.js  styles.js  util.js
src/lib/assets/: Logo.svelte
src/lib/discover/: Card.svelte  DownloadGameModal.svelte  Grid.svelte  Pagination.svelte  Panel.svelte
src/lib/downloads/: DownloadItem.svelte  DownloadsList.svelte
src/lib/settings/: AddTorrentClientModal.svelte  ConfigureDelugeModal.svelte  ConfigureQBittorrentModal.svelte
src/routes/: +layout.svelte  +page.svelte  __layout.svelte  about.svelte  discover.svelte  documentation.svelte  downloads.svelte  index.svelte  library.svelte  settings.svelte  wiki.svelte
src/routes/settings/: +page.svelte  [slug].svelte
src/routes/settings/[slug]/: +page.svelte
src/routes/wiki/: +page.svelte
