[package]
name = "rum"
version = "0.7.2"
description = "Game launcher"
authors = ["silentnoodle", "gnurur"]
license = "GPLv2"
repository = ""
default-run = "rum"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.5", features = ["dialog-all", "shell-open", "window-all"] }
rumlibrs = { git = "https://johncena141.eu.org:8141/johncena141/rumlibrs", tag="0.6.2" }
reqwest = "0.11"
gilrs = { version = "0.8.1", features = ["serde-serialize"] }
[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
